fixed nav bar, side bar, footer, stlying, spacing, created gallery view bug

--- a/assets/css/styleview3.css
+++ b/assets/css/styleview3.css
@@ -80,6 +80,15 @@ nav {
 	top: 30%
 }*/
 
+#button-container {
+	position: absolute;
+	left: 80%;
+	top: 30%
+	/*transform: translateX(-100%);*/
+	/*display: inline-block;*/
+	/*padding: 20px 10px;*/
+}
+
 #nav-container {
 	position: relative;
 	margin-left: 12em;
@@ -153,7 +162,7 @@ nav {
 }
 
 .button-container button {
-	
+
 }
 
 .button-container button:hover {
@@ -174,11 +183,12 @@ nav {
 }
 
 #container {
-	position: absolute; 
+	position: relative; 
 	width: 100%;
 	height: 29em;
 	overflow-y: auto;
 	text-align: center;
+	/*transform: translateX(10%);*/
 }
 
 .post {
@@ -190,7 +200,7 @@ nav {
 	position: relative;
 	padding: 0px 20px;
 	margin: 20px;
-	transform: translateX(-15%);
+	transform: translateX(-20%);
 }
 
 .post:hover {
@@ -227,6 +237,7 @@ nav {
 
 .pinfo-container {
 	position: relative;
+	background-color: pink;
 }
 
 
